User controller and api doc
